Remove runtime specification from vercel.json and add Node.js version to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mealplanner-telegram-webapp",
   "version": "1.0.0",
   "description": "Telegram WebApp for meal planning",
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": "18.x"
+  }
 }
 
